--- a/deck.mdx
+++ b/deck.mdx
@@ -2452,4 +2452,27 @@ function Promise (handler) {
 
 ---
 
+# Is this ECMAScript compliant?
+
+No
+
+<Steps>
+
+- I mainly skipped a lot of error handling for brevity
+- I didn't make the various convenience methods
+
+</Steps>
+
+---
+
+<Steps>
+
+- Promises are just objects with functions that eventually get called
+- Promise internals are just a few things to store those functions for eventual invocation
+- Promises are neat
+
+</Steps>
+
+---
+
 Thanks!
